[metadata]
name = eval_bio_lms
version = 0.4.0

[options]
packages = eval_bio_lms
python_requires = >=3.8
install_requires =
    accelerate >= 0.10.0,<0.11.0
    datasets >=2.3.0,<2.4.0
    pandas
    seqeval >= 1.2.0,<1.3.0
    rich >= 12.4.0,<12.5.0
    transformers >=4.20.0,<4.21.0
    typer >=0.4.0,<0.5.0
